working on animations

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -1176,10 +1176,10 @@
        "/* PRINT */\n",
        "\n",
        "#toc ol {\n",
-       "    font-size: 12px; \n",
+       "    font-size: 10px; \n",
        "    line-height: 120%; \n",
        "    padding: 0; \n",
-       "    margin-left: 12px; \n",
+       "    margin-left: 10px; \n",
        "    list-style-type: decimal;\n",
        "}\n",
        "\n",
@@ -1194,10 +1194,10 @@
        "div.input_area span {white-space: nowrap;}\n",
        "div.input_area  { padding: 10px; overflow-x: scroll }\n",
        ".rendered_html p{ text-align: left }\n",
-       "div.input_area>div.highlight  { padding:10px; overflow-x: hidden }\n",
+       "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:12px; line-height:120%; }\n",
+       ".input_area pre { font-size:10px; line-height:120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
        "div.text_cell_render { font-size:16px;  line-height:120% }\n",
@@ -1411,7 +1411,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
