--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -210,25 +210,42 @@
      "data": {
       "text/html": [
        "<style>\n",
+       "\n",
        "/* PRINT */\n",
        "\n",
-       "div.MathJax_Display {padding: 40px}\n",
-       "div.input_area  { padding:10px; }\n",
+       "#toc ol {\n",
+       "    font-size: 10px; \n",
+       "    line-height: 120%; \n",
+       "    padding: 0; \n",
+       "    margin-left: 10px; \n",
+       "    list-style-type: decimal;\n",
+       "}\n",
+       "\n",
+       "/* PRINT */\n",
+       "div.text_cell_render table, \n",
+       "div.text_cell_render  tr,\n",
+       "div.text_cell_render td {\n",
+       "    border: 0px solid black;\n",
+       "}\n",
+       "div.MathJax_Display {padding: 40px 5px 40px 5px}\n",
+       "\n",
+       "div.input_area span {white-space: nowrap;}\n",
+       "div.input_area  { padding: 10px; overflow-x: scroll }\n",
        ".rendered_html p{ text-align: left }\n",
        "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:10px; line-height: 120% }\n",
+       ".input_area pre { font-size:10px; line-height:120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-size:24px; text-align: left; line-height: 140% }\n",
+       "div.text_cell_render { font-size:16px;  line-height:120% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       "div.text_cell_render pre { font-size:14px; line-height: 120% }\n",
+       ".text_cell_render pre { font-size:14px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#333333;}\n",
-       "blockquote { background-color: #FFFF66; }\n",
+       "blockquote { background-color:#ffff66; }\n",
        "\n",
        "/* BUILTIN */\n",
        ".input_area .highlight .bp { color: #CD5C5C } /* Name.Builtin.Pseudo */\n",
@@ -314,10 +331,10 @@
        "/* JUPYTER */\n",
        "\n",
        "/* FONT_EDIT */\n",
-       ".cm-s-default span { font-size:24px; line-height:120% }\n",
+       ".cm-s-default span { font-size:16px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND_EDIT */\n",
-       "div .cm-s-default { background-color: #dddddd;}\n",
+       "div .cm-s-default { background-color: #888888;}\n",
        "\n",
        "/* CURSOR */\n",
        ".input_area .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF; }\n",
@@ -355,9 +372,77 @@
        ".input_area .cm-s-ipython span.cm-string { color: #FFA0A0 } \n",
        ".input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
        "\n",
-       "</style>\n",
+       "</style><script> \n",
+       "// Converts integer to roman numeral\n",
+       "function romanize(num) {\n",
+       "    var lookup = {M:1000,CM:900,D:500,CD:400,C:100,XC:90,L:50,XL:40,X:10,IX:9,V:5,IV:4,I:1},\n",
+       "    roman = '',\n",
+       "    i;\n",
+       "    for ( i in lookup ) {\n",
+       "        while ( num >= lookup[i] ) {\n",
+       "            roman += i;\n",
+       "            num -= lookup[i];\n",
+       "        }\n",
+       "    }\n",
+       "    return roman;\n",
+       "}\n",
+       "\n",
+       "// Builds a <ul> Table of Contents from all <headers> in DOM\n",
+       "function createTOC(){\n",
+       "    var toc = \"\";\n",
+       "    var level = 0;\n",
+       "    var levels = {}\n",
+       "    $('#toc').html('');\n",
+       "\n",
+       "    $(\":header\").each(function(i){\n",
+       "        if (this.id=='tocheading'){return;}\n",
+       "\n",
+       "        titleText = this.innerHTML;\n",
+       "        openLevel = this.tagName[1];\n",
+       "        if(openLevel>1) {\n",
+       "            openLevel-=1\n",
+       "\n",
+       "        if (levels[openLevel]){\n",
+       "            levels[openLevel] += 1;\n",
+       "        } else{\n",
+       "            levels[openLevel] = 1;\n",
+       "        }\n",
+       "\n",
+       "        if (openLevel > level) {\n",
+       "            toc += (new Array(openLevel - level + 1)).join('<ol type=\"1\" class=\"toc\">');\n",
+       "        } else if (openLevel < level) {\n",
+       "            toc += (new Array(level - openLevel + 1)).join(\"</ol>\");\n",
+       "            for (i=level;i>openLevel;i--){levels[i]=0;}\n",
+       "        }\n",
+       "\n",
+       "        level = parseInt(openLevel);\n",
        "\n",
        "\n",
+       "        if (this.id==''){this.id = this.innerHTML.replace(/ /g,\"-\")}\n",
+       "        var anchor = this.id;\n",
+       "\n",
+       "        toc += '<li><a href=\"#' + anchor + '\">' + titleText\n",
+       "        + '</a></li>';\n",
+       "    }\n",
+       "\n",
+       "    });\n",
+       "\n",
+       "\n",
+       "    if (level) {\n",
+       "        toc += (new Array(level + 1)).join(\"</ol>\");\n",
+       "    }\n",
+       "\n",
+       "\n",
+       "    $('#toc').append(toc);\n",
+       "\n",
+       "};\n",
+       "\n",
+       "// Executes the createToc function\n",
+       "setTimeout(function(){createTOC();},100);\n",
+       "\n",
+       "// Rebuild to TOC every minute\n",
+       "setInterval(function(){createTOC();},60000);\n",
+       "</script>\n",
        "\n"
       ],
       "text/plain": [
