--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -1204,6 +1204,7 @@
        "div.MathJax_Display {padding: 40px 5px 40px 5px}\n",
        "\n",
        "div.input_area  { padding: 10px;  }\n",
+       "div.input_area>div.highlight>pre  { overflow-x: scroll;  }\n",
        "div.input_area>div.highlight>pre>span { white-space: nowrap;  }\n",
        ".rendered_html p{ text-align: left }\n",
        "div.input_area>div.highlight  { padding:10px; }\n",
@@ -1423,7 +1424,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
