--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -1204,8 +1204,20 @@
        "div.MathJax_Display {padding: 40px 5px 40px 5px}\n",
        "\n",
        "div.input_area  { padding: 10px;  }\n",
-       "div.input_area>div.highlight>pre  { overflow-x: scroll;  }\n",
-       "div.input_area>div.highlight>pre>span { white-space: nowrap;  }\n",
+       "\n",
+       "div.input_area  { \n",
+       "    min-width: 1000px !important; \n",
+       "    max-width:1000px !important; \n",
+       "    overflow-x: hide\n",
+       "} \n",
+       "div.input_area pre {  \n",
+       "    min-width: 400px !important; \n",
+       "    max-width:400px !important; \n",
+       "}\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
        ".rendered_html p{ text-align: left }\n",
        "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
@@ -1424,7 +1436,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
