--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -1206,13 +1206,11 @@
        "div.input_area  { padding: 10px;  }\n",
        "\n",
        "div.input_area  { \n",
-       "    min-width: 1000px !important; \n",
-       "    max-width:1000px !important; \n",
+       "    min-width: 20em !important; \n",
        "    overflow-x: hide\n",
        "} \n",
        "div.input_area pre {  \n",
-       "    min-width: 400px !important; \n",
-       "    max-width:400px !important; \n",
+       "    min-width: 20em !important; \n",
        "}\n",
        "\n",
        "\n",
@@ -1436,7 +1434,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
