--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -21,7 +21,7 @@
    },
    "source": [
     "A Hopfield network is a form of recurrent artificial neural network popularized by John Hopfield in [1982](http://www.ncbi.nlm.nih.gov/pubmed/6953413).   It is an autoassociative network, which means that it can store a piece of data given as the activation of its own units and then retrieve it when you trigger a subpopulation of its units that is equal to a tiny sample of the same piece of data.\n",
-    "Learning is done by changing the weights of the connections between its units in a  *fake* hebbian way. You treat each input pattern as if it were the vector of the activations of units and highten the weights of the connections between concurrently active units. "
+    "Learning is done by changing the weights of the connections between its units in a  *fake* hebbian way. You treat each input pattern as if it was the vector of the activations of units and highten the weights of the connections between concurrently active units. "
    ]
   },
   {
@@ -219,7 +219,7 @@
     }
    },
    "source": [
-    "#### Init the dataset\n",
+    "#### Initialize the dataset\n",
     "First we initialize the dataset:"
    ]
   },
@@ -237,13 +237,14 @@
     "#### download the dataset \n",
     "# get the script from internet\n",
     "! wget https://raw.githubusercontent.com/sorki/python-mnist/master/get_data.sh > /dev/null 2>&1  \n",
+    "\n",
     "# run it to dovnload all files in a local dir named 'data'\n",
     "! bash get_data.sh >/dev/null 2>&1\n",
+    "\n",
     "# we do not need the script anymore, remove it\n",
     "! rm get_data.sh* > /dev/null 2>&1\n",
     "\n",
     "# initialize the dataset variables\n",
-    "\n",
     "%run utils"
    ]
   },
@@ -366,7 +367,7 @@
    "source": [
     "#### Iterating the timesteps\n",
     "\n",
-    "Now we implement th core part, defining what happens in each timestep"
+    "Now we implement the core part, defining what happens in each timestep"
    ]
   },
   {
@@ -379,15 +380,19 @@
    "source": [
     "# number of timesteps\n",
     "stime = 1000\n",
+    "\n",
     "# number of samples to store as long \n",
     "# as spreading goes on\n",
     "samples = 100\n",
+    "\n",
     "# timestep interval between two samples\n",
     "sint = stime/samples\n",
+    "\n",
     "# init the stories of spreading as a zero array,\n",
     "# we will fill it in at each timestep and we will \n",
     "# plot it at the end\n",
     "store_images = zeros([n_patterns, n, samples])\n",
+    "\n",
     "# init the stories of energy as a zero array,\n",
     "# we will fill it in at each timestep and we will \n",
     "# plot it at the end\n",
@@ -453,51 +458,59 @@
     "# flexible way\n",
     "import matplotlib.gridspec as gridspec\n",
     "\n",
-    "     \n",
+    "# initialize the figure for the animation    \n",
     "def init_fig(target_index) :    \n",
-    "    '''\n",
-    "    Initialize the figure for the animation\n",
-    "    \n",
+    "    ''' \n",
     "    target_index :  (int)   the index of the target \n",
     "                            to plot\n",
     "    returns      :          a tuple with the three \n",
     "                            plotting objects to render\n",
     "    '''   \n",
+    "    # this is the target digit\n",
     "    target = patterns[target_index]\n",
     "    \n",
+    "    # init the grid and the figure\n",
     "    gs = gridspec.GridSpec(8, 20)\n",
     "    fig = figure(figsize=(8, 3.5))        \n",
     "\n",
+    "    # plot 1 - plot the target digit\n",
     "    ax1 = fig.add_subplot(gs[:4,:4])\n",
     "    title(\"target\")\n",
+    "    # create the imshow and save the handler\n",
     "    im_target = ax1.imshow(to_mat(target), \n",
     "                           interpolation = 'none', \n",
     "                           aspect = 'auto',\n",
     "                           cmap = cm.binary) \n",
     "    axis('off')\n",
     "\n",
+    "    \n",
+    "    # plot 2 - plot the current state of the network\n",
     "    ax2 = fig.add_subplot(gs[:4,6:10])\n",
     "    title(\"recalling\")\n",
+    "    # create the imshow and save the handler\n",
     "    im_x = ax2.imshow(to_mat(x), \n",
     "                      interpolation = 'none', \n",
     "                      aspect = 'auto',\n",
     "                      cmap = cm.binary) \n",
     "    axis('off')\n",
     "\n",
+    "    # plot 3 - plot the current history of energy\n",
     "    ax3 = fig.add_subplot(gs[:4,12:])\n",
     "    title(\"Energy\")\n",
+    "    # create the line plot and save the handler\n",
     "    im_E, = ax3.plot(E[target_index])\n",
+    "    # only bottom-left axes - no tics\n",
     "    ax3.spines['top'].set_visible(False)\n",
     "    ax3.spines['right'].set_visible(False)\n",
     "    ax3.set_xticks([])\n",
     "    ax3.set_yticks([])\n",
     "    \n",
+    "    # return the handlers\n",
     "    return fig,im_target,im_x,im_E\n",
     "\n",
-    "\n",
+    "# Updates images at each frame of the animation\n",
     "def update(data) :\n",
     "    '''\n",
-    "    Updates images at each frame of the animation\n",
     "    \n",
     "    data    : (list of tuples)  each rows contains the\n",
     "                                arguments of update for \n",
@@ -505,10 +518,15 @@
     "    returns :                   the handlers of the \n",
     "                                images                 \n",
     "    '''\n",
+    "    # unpack data\n",
     "    image, E = data\n",
+    "    \n",
+    "    # update data of plot 2 and 3\n",
+    "    # (plot 1 is static)\n",
     "    im_x.set_array(to_mat(image))\n",
     "    im_E.set_data(arange(len(E)),E)\n",
     "    \n",
+    "    # return the handlers\n",
     "    return im_target,im_x,im_E"
    ]
   },
@@ -5939,6 +5957,7 @@
     "target_index = 0\n",
     "# initialize the figure\n",
     "fig, im_target, im_x, im_E = init_fig(target_index)\n",
+    "\n",
     "# build the sequence of update arguments for pattern 0.\n",
     "# each row of the list contains the activation vector at a \n",
     "# timestep and  a vector storing the energy story up to \n",
@@ -5946,6 +5965,7 @@
     "data = [ (squeeze(store_images[target_index,:,t]), \n",
     "          squeeze(E[target_index, :t*sint])) \n",
     "    for t in xrange(samples ) ]\n",
+    "\n",
     "# create and render the animation\n",
     "anim = animation.FuncAnimation(fig, update, data)\n",
     "AH.display_animation(anim)"
@@ -11310,6 +11330,7 @@
     "target_index = 1\n",
     "# initialize the figure\n",
     "fig, im_target, im_x, im_E = init_fig(target_index)\n",
+    "\n",
     "# build the sequence of update arguments for pattern 1.\n",
     "# each row of the list contains the activation vector at a \n",
     "# timestep and  a vector storing the energy story up to \n",
@@ -11317,6 +11338,7 @@
     "data = [ (squeeze(store_images[target_index,:,t]), \n",
     "          squeeze(E[target_index, :t*sint])) \n",
     "    for t in xrange(samples ) ]\n",
+    "\n",
     "# create and render the animation\n",
     "anim = animation.FuncAnimation(fig, update, data)\n",
     "AH.display_animation(anim)"
@@ -11338,7 +11360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -11601,7 +11623,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
