--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -21,7 +21,7 @@
    },
    "source": [
     "A Hopfield network is a form of recurrent artificial neural network popularized by John Hopfield in [1982](http://www.ncbi.nlm.nih.gov/pubmed/6953413).   It is an autoassociative network, which means that it can store a piece of data given as the activation of its own units and then retrieve it when you trigger a subpopulation of its units that is equal to a tiny sample of the same piece of data.\n",
-    "Learning is done by changing the weights of the connections between its units in a  *fake* hebbian way. You treat each input pattern as if it was the vector of the activations of units and highten the weights of the connections between concurrently active units. "
+    "Learning is done by changing the weights of the connections between its units in a  *fake* hebbian way. You treat each input pattern as if it were the vector of the activations of units and highten the weights of the connections between concurrently active units. "
    ]
   },
   {
@@ -53,7 +53,7 @@
     }
    },
    "source": [
-    "### Spreading\n",
+    "### Spreading of activations\n",
     "\n",
     "The activation of a unit in a Hopfield network is updated by evaluating the sign of the weighted sum of its inputs:\n",
     "\n",
@@ -11360,7 +11360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -11623,7 +11623,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
