--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -38,13 +38,13 @@
    },
    "outputs": [],
    "source": [
-    "# download bash script \n",
+    "# Download bash script \n",
     "! wget https://raw.githubusercontent.com/sorki/python-mnist/master/get_data.sh > /dev/null 2>&1\n",
     "    \n",
-    "# run it to create the 'data' folder and fill it with the dataset files\n",
+    "# Run it to create the 'data' folder and fill it with the dataset files\n",
     "! bash get_data.sh >/dev/null 2>&1\n",
     "\n",
-    "# remove the script file\n",
+    "# Remove the script file\n",
     "! rm get_data.sh* > /dev/null 2>&1"
    ]
   },
@@ -69,15 +69,15 @@
     "from mnist import MNIST    # import the mnist class\n",
     "mndata = MNIST('./data')    # init with the 'data' dir\n",
     "\n",
-    "# load data\n",
+    "# Load data\n",
     "mndata.load_training() \n",
     "mndata.load_testing()\n",
     "\n",
-    "# the number of pixels per side of all images\n",
+    "# The number of pixels per side of all images\n",
     "img_side = 28\n",
     "\n",
-    "# each input is a raw vector.\n",
-    "# the number of units of the network \n",
+    "# Each input is a raw vector.\n",
+    "# The number of units of the network \n",
     "# corresponds to the number of input elements\n",
     "n = img_side*img_side "
    ]
@@ -111,27 +111,32 @@
     "%matplotlib inline\n",
     "from pylab import *\n",
     "\n",
-    "# define the number of samples to take\n",
+    "# Define the number of samples to take\n",
     "num_samples = 10\n",
     "\n",
     "# create a figure where we will store all samples \n",
     "figure(figsize=(10,1))\n",
     "\n",
-    "# iterate over samples'indices\n",
+    "# Iterate over samples indices\n",
     "for sample in xrange(num_samples) :\n",
     "    \n",
-    "    # the image corresponding to the 'sample' index\n",
+    "    # The image corresponding to the 'sample' index\n",
     "    img = mndata.train_images[sample]\n",
-    "    # the label of the image\n",
+    "    \n",
+    "    # The label of the image\n",
     "    label = mndata.train_labels[sample]\n",
-    "    # the image is stored as a rolled vector,\n",
+    "    \n",
+    "    # The image is stored as a rolled vector,\n",
     "    # we have to roll it back in a matrix\n",
     "    aimg = array(img).reshape(img_side, img_side)\n",
-    "    # open a subplot for each sample\n",
+    "    \n",
+    "    # Open a subplot for each sample\n",
     "    subplot(1, num_samples, sample+1)\n",
-    "    # the corresponding digit is the title of the plot\n",
+    "    \n",
+    "    # The corresponding digit is the title of the plot\n",
     "    title(label)\n",
-    "    # we use imshow to plot the matrix of pixels\n",
+    "    \n",
+    "    # We use imshow to plot the matrix of pixels\n",
     "    imshow(aimg, interpolation = 'none', \n",
     "        aspect = 'auto', cmap = cm.binary)\n",
     "    axis(\"off\")\n",
@@ -155,14 +160,14 @@
    },
    "outputs": [],
    "source": [
-    "# set the maximum number of plots to be printed in a row\n",
+    "# Set the maximum number of plots to be printed in a row\n",
     "windows = 8\n",
     "\n",
-    "# a custom plot that uses imshow to draw a matrix\n",
-    "# x:        array           the matrix to be plotted\n",
-    "# fig:      figure object   figure device to use\n",
-    "# window:   int             the current subplot position\n",
-    "# windows   int             number of subplot\n",
+    "# A custom plot that uses imshow to draw a matrix\n",
+    "# x      :  array           The matrix to be plotted\n",
+    "# fig    :  figure object   Figure device to use\n",
+    "# window :  int             The current subplot position\n",
+    "# windows:  int             Number of subplot\n",
     "def plot_img(x, fig, window, windows = windows) :\n",
     "    ax = fig.add_subplot(1, windows, window)\n",
     "    ax.imshow(x, interpolation = 'none', \n",
@@ -171,9 +176,9 @@
     "    fig.canvas.draw()\n",
     "\n",
     "\n",
-    "# transform a raw input in an image matrix  \n",
-    "# x:      array    the raw input vector\n",
-    "# return  array    a squared matrix\n",
+    "# Transform a raw input in an image matrix  \n",
+    "# x     :  vector   The raw input vector\n",
+    "# return:  array    A squared matrix\n",
     "def to_mat(x) :\n",
     "    return x.reshape( img_side, img_side )"
    ]
@@ -198,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -214,10 +219,10 @@
        "/* PRINT */\n",
        "\n",
        "#toc ol {\n",
-       "    font-size: 10px; \n",
+       "    font-size: 16px; \n",
        "    line-height: 120%; \n",
        "    padding: 0; \n",
-       "    margin-left: 10px; \n",
+       "    margin-left: 16px; \n",
        "    list-style-type: decimal;\n",
        "}\n",
        "\n",
@@ -229,19 +234,30 @@
        "}\n",
        "div.MathJax_Display {padding: 40px 5px 40px 5px}\n",
        "\n",
-       "div.input_area span {white-space: nowrap;}\n",
-       "div.input_area  { padding: 10px; overflow-x: scroll }\n",
+       "div.input_area  { padding: 10px;  }\n",
+       "\n",
+       "div.input_area  { \n",
+       "    min-width: 20em !important; \n",
+       "    overflow-x: hide\n",
+       "} \n",
+       "div.input_area pre {  \n",
+       "    min-width: 20em !important; \n",
+       "}\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
        ".rendered_html p{ text-align: left }\n",
        "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:10px; line-height:120% }\n",
+       ".input_area pre { font-size:12px; line-height:120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
        "div.text_cell_render { font-size:16px;  line-height:120% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       ".text_cell_render pre { font-size:14px; line-height:120% }\n",
+       ".text_cell_render pre { font-size:12px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#333333;}\n",
@@ -449,7 +465,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
