--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -234,17 +234,17 @@
    },
    "outputs": [],
    "source": [
-    "#### download the dataset \n",
-    "# get the script from internet\n",
+    "#### Download the dataset \n",
+    "# Get the script from internet\n",
     "! wget https://raw.githubusercontent.com/sorki/python-mnist/master/get_data.sh > /dev/null 2>&1  \n",
     "\n",
-    "# run it to dovnload all files in a local dir named 'data'\n",
+    "# Run it to dovnload all files in a local dir named 'data'\n",
     "! bash get_data.sh >/dev/null 2>&1\n",
     "\n",
-    "# we do not need the script anymore, remove it\n",
+    "# We do not need the script anymore, remove it\n",
     "! rm get_data.sh* > /dev/null 2>&1\n",
     "\n",
-    "# initialize the dataset variables\n",
+    "# Initialize the dataset variables\n",
     "%run utils"
    ]
   },
@@ -271,12 +271,13 @@
    },
    "outputs": [],
    "source": [
-    "# take two rows\n",
+    "# Take two rows\n",
     "patterns = array(mndata.train_images)[[2,5],]\n",
-    "# we need only the sign (transform to binary input)\n",
+    "\n",
+    "# We need only the sign (transform to binary input)\n",
     "patterns = sign(patterns/255.0 - 0.5)\n",
     "\n",
-    "# set the number of patterns (two in out case)\n",
+    "# Set the number of patterns (two in out case)\n",
     "n_patterns = patterns.shape[0]"
    ]
   },
@@ -343,17 +344,17 @@
    },
    "outputs": [],
    "source": [
-    "# initialize weights to zero values\n",
+    "# Initialize weights to zero values\n",
     "W = zeros([n,n])\n",
     "\n",
-    "# accumulate outer products \n",
+    "# Accumulate outer products \n",
     "for pattern in patterns :\n",
     "    W += outer(pattern, pattern)\n",
     "\n",
-    "# divide times the number of patterns\n",
+    "# Divide times the number of patterns\n",
     "W /= float(n_patterns)\n",
     "\n",
-    "# exclude the autoconnections\n",
+    "# Exclude the autoconnections\n",
     "W *= 1.0 - eye(n, n)"
    ]
   },
@@ -378,60 +379,62 @@
    },
    "outputs": [],
    "source": [
-    "# number of timesteps\n",
+    "# Number of timesteps\n",
     "stime = 1000\n",
     "\n",
-    "# number of samples to store as long \n",
+    "# Number of samples to store as long \n",
     "# as spreading goes on\n",
     "samples = 100\n",
     "\n",
-    "# timestep interval between two samples\n",
+    "# Timestep interval between two samples\n",
     "sint = stime/samples\n",
     "\n",
-    "# init the stories of spreading as a zero array,\n",
+    "# Init the stories of spreading as a zero array,\n",
     "# we will fill it in at each timestep and we will \n",
     "# plot it at the end\n",
     "store_images = zeros([n_patterns, n, samples])\n",
     "\n",
-    "# init the stories of energy as a zero array,\n",
+    "# Init the stories of energy as a zero array,\n",
     "# we will fill it in at each timestep and we will \n",
     "# plot it at the end\n",
     "E = zeros([n_patterns, stime])\n",
     "\n",
-    "# we simulate two iteration, each one starting\n",
+    "# We simulate two iterations, each one starting\n",
     "# with a coorupted version of one of our two patterns\n",
     "for target_index in xrange(n_patterns) :\n",
     "\n",
-    "    # first copy the original pattern\n",
+    "    # Copy the original pattern\n",
     "    target = patterns[target_index]\n",
     "    x = target.copy()\n",
-    "    # then modify the second half of the image \n",
+    "    \n",
+    "    # Then modify the second half of the image \n",
     "    # putting random binary values\n",
     "    x[(n/2):] = sign(randn(n/2))\n",
     "\n",
     "    \n",
-    "    # during the iterations we need to peek \n",
+    "    # During the iterations we need to peek \n",
     "    # one unit at random. Thus we must prepare\n",
     "    # a random sequence of indices:\n",
     "    #    we get the sequence of indices \n",
     "    #    of the network units\n",
     "    x_indices = arange(n)\n",
+    "    \n",
     "    #    and we shuffle it\n",
     "    shuffle(x_indices)\n",
     "    \n",
     "    # the iterations\n",
     "    for t in xrange(stime) :\n",
-    "        # we get the current index browsing \n",
+    "        # Get the current index browsing \n",
     "        # the random sequence \n",
     "        current_x = x_indices[t%n]   \n",
     "        \n",
-    "        # activation of a unit\n",
+    "        # Activation of a unit\n",
     "        x[current_x] = sign(dot(W[current_x,:], x))\n",
     "        \n",
-    "        # energy of the current state of the network\n",
+    "        # Energy of the current state of the network\n",
     "        E[target_index, t] = -0.5*dot(x, dot(W, x))\n",
     "        \n",
-    "        # store current activations\n",
+    "        # Store current activations\n",
     "        if stime%sint == 0 :\n",
     "            store_images[target_index,:,t/sint] = x"
    ]
@@ -454,29 +457,35 @@
    "source": [
     "# The matplotlib object to do animations\n",
     "from matplotlib import animation\n",
-    "# this grid allows to layout subplots in a more\n",
+    "\n",
+    "# This grid allows to layout subplots in a more\n",
     "# flexible way\n",
     "import matplotlib.gridspec as gridspec\n",
     "\n",
-    "# initialize the figure for the animation    \n",
+    "# Initialize the figure for the animation    \n",
+    "# Initialize the figure for the animation    \n",
+    "# target_index :  int     The index of the target \n",
+    "#                         to plot\n",
+    "# returns      :  tuple   The three plotting objects \n",
+    "#                         to render    \n",
     "def init_fig(target_index) :    \n",
-    "    ''' \n",
-    "    target_index :  (int)   the index of the target \n",
-    "                            to plot\n",
-    "    returns      :          a tuple with the three \n",
-    "                            plotting objects to render\n",
-    "    '''   \n",
-    "    # this is the target digit\n",
+    "  \n",
+    "    # This is the target digit\n",
     "    target = patterns[target_index]\n",
     "    \n",
-    "    # init the grid and the figure\n",
+    "    # Init the grid and the figure\n",
     "    gs = gridspec.GridSpec(8, 20)\n",
     "    fig = figure(figsize=(8, 3.5))        \n",
     "\n",
-    "    # plot 1 - plot the target digit\n",
+    "    #-------------------------------------------------\n",
+    "    # Plot 1 - plot the target digit\n",
+    "    \n",
+    "    # Create subplot\n",
     "    ax1 = fig.add_subplot(gs[:4,:4])\n",
+    "    \n",
     "    title(\"target\")\n",
-    "    # create the imshow and save the handler\n",
+    "    \n",
+    "    # Create the imshow and save the handler\n",
     "    im_target = ax1.imshow(to_mat(target), \n",
     "                           interpolation = 'none', \n",
     "                           aspect = 'auto',\n",
@@ -484,49 +493,58 @@
     "    axis('off')\n",
     "\n",
     "    \n",
-    "    # plot 2 - plot the current state of the network\n",
+    "    #-------------------------------------------------\n",
+    "    # Plot 2 - plot the current state of the network\n",
+    "    \n",
+    "    # Create subplot\n",
     "    ax2 = fig.add_subplot(gs[:4,6:10])\n",
+    "  \n",
     "    title(\"recalling\")\n",
-    "    # create the imshow and save the handler\n",
+    "   \n",
+    "    # Create the imshow and save the handler\n",
     "    im_x = ax2.imshow(to_mat(x), \n",
     "                      interpolation = 'none', \n",
     "                      aspect = 'auto',\n",
     "                      cmap = cm.binary) \n",
     "    axis('off')\n",
     "\n",
-    "    # plot 3 - plot the current history of energy\n",
+    "    #-------------------------------------------------\n",
+    "    # Plot 3 - plot the current history of energy\n",
+    "    \n",
+    "    # Create subplot\n",
     "    ax3 = fig.add_subplot(gs[:4,12:])\n",
+    " \n",
     "    title(\"Energy\")\n",
-    "    # create the line plot and save the handler\n",
+    "   \n",
+    "    # Create the line plot and save the handler\n",
     "    im_E, = ax3.plot(E[target_index])\n",
-    "    # only bottom-left axes - no tics\n",
+    "    \n",
+    "    # Only bottom-left axes - no tics\n",
     "    ax3.spines['top'].set_visible(False)\n",
     "    ax3.spines['right'].set_visible(False)\n",
     "    ax3.set_xticks([])\n",
     "    ax3.set_yticks([])\n",
     "    \n",
-    "    # return the handlers\n",
+    "    # Return the handlers\n",
     "    return fig,im_target,im_x,im_E\n",
     "\n",
     "# Updates images at each frame of the animation\n",
+    "# data    : list of tuples    Each row contains the\n",
+    "#                             arguments of update for \n",
+    "#                             a frame\n",
+    "# returns : tuple             The handlers of the \n",
+    "#                             images \n",
     "def update(data) :\n",
-    "    '''\n",
-    "    \n",
-    "    data    : (list of tuples)  each rows contains the\n",
-    "                                arguments of update for \n",
-    "                                a frame\n",
-    "    returns :                   the handlers of the \n",
-    "                                images                 \n",
-    "    '''\n",
+    "\n",
     "    # unpack data\n",
     "    image, E = data\n",
     "    \n",
-    "    # update data of plot 2 and 3\n",
+    "    # Update data of plot 2 and 3\n",
     "    # (plot 1 is static)\n",
     "    im_x.set_array(to_mat(image))\n",
     "    im_E.set_data(arange(len(E)),E)\n",
     "    \n",
-    "    # return the handlers\n",
+    "    # Return the handlers\n",
     "    return im_target,im_x,im_E"
    ]
   },
@@ -5953,12 +5971,12 @@
     "# (see anim_to_html.py)\n",
     "import anim_to_html as AH\n",
     "\n",
-    "# the first pattern\n",
+    "# The first pattern\n",
     "target_index = 0\n",
-    "# initialize the figure\n",
+    "# Initialize the figure\n",
     "fig, im_target, im_x, im_E = init_fig(target_index)\n",
     "\n",
-    "# build the sequence of update arguments for pattern 0.\n",
+    "# Build the sequence of update arguments for pattern 0.\n",
     "# each row of the list contains the activation vector at a \n",
     "# timestep and  a vector storing the energy story up to \n",
     "# that timestep. \n",
@@ -5966,7 +5984,7 @@
     "          squeeze(E[target_index, :t*sint])) \n",
     "    for t in xrange(samples ) ]\n",
     "\n",
-    "# create and render the animation\n",
+    "# Create and render the animation\n",
     "anim = animation.FuncAnimation(fig, update, data)\n",
     "AH.display_animation(anim)"
    ]
@@ -11326,12 +11344,12 @@
     }
    ],
    "source": [
-    "# the second pattern\n",
+    "# The second pattern\n",
     "target_index = 1\n",
-    "# initialize the figure\n",
+    "# Initialize the figure\n",
     "fig, im_target, im_x, im_E = init_fig(target_index)\n",
     "\n",
-    "# build the sequence of update arguments for pattern 1.\n",
+    "# Build the sequence of update arguments for pattern 1.\n",
     "# each row of the list contains the activation vector at a \n",
     "# timestep and  a vector storing the energy story up to \n",
     "# that timestep. \n",
@@ -11339,7 +11357,7 @@
     "          squeeze(E[target_index, :t*sint])) \n",
     "    for t in xrange(samples ) ]\n",
     "\n",
-    "# create and render the animation\n",
+    "# Create and render the animation\n",
     "anim = animation.FuncAnimation(fig, update, data)\n",
     "AH.display_animation(anim)"
    ]
