--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plotting\n",
+    "#### Plotting the training history\n",
     "We can plot the history of the modifications of the decision boundary and the error curve:"
    ]
   },
@@ -452,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### test\n",
+    "#### Testing\n",
     "\n",
     "Now we create a new dataset to test the network: "
    ]
@@ -502,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plotting\n",
+    "#### Plotting test results\n",
     "We plot all test patterns using the output of the network to color them. Intens red and blue dots are identified as belonging to a class with a little error, while it is much harder to identify white dots."
    ]
   },
