--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -513,7 +513,8 @@
     "collapsed": false,
     "run_control": {
      "marked": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -960,7 +961,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"mnist-perceptron-training.gif\"></img>"
+    "<img style=\"width:8in\" src=\"mnist-perceptron-training.gif\"></img>"
    ]
   },
   {
