--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -238,10 +238,10 @@
        "/* PRINT */\n",
        "\n",
        "#toc ol {\n",
-       "    font-size: 16px; \n",
+       "    font-size: 20px; \n",
        "    line-height: 120%; \n",
        "    padding: 0; \n",
-       "    margin-left: 16px; \n",
+       "    margin-left: 20px; \n",
        "    list-style-type: decimal;\n",
        "}\n",
        "\n",
@@ -265,19 +265,18 @@
        "}\n",
        "\n",
        "\n",
-       "\n",
-       "\n",
+       "div.input_area  { padding: 10px;  }\n",
        ".rendered_html p{ text-align: left }\n",
        "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:12px; line-height:120% }\n",
+       ".input_area pre { font-size:10px; line-height:120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-size:16px;  line-height:120% }\n",
+       "div.text_cell_render { font-size:20px;  line-height:120% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       ".text_cell_render pre { font-size:12px; line-height:120% }\n",
+       ".text_cell_render pre { font-size:14px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#333333;}\n",
@@ -485,7 +484,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
